Fix visible list items

--- a/src/app/training/training.scss
+++ b/src/app/training/training.scss
@@ -38,14 +38,26 @@
   background: #fff;
   border: 2px solid #000;
   margin: 5px;
+  border-radius: 10px;
+
+  text-align: center;
+  line-height: 80px;
+
+  span {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+  }
 }
 
 .transformationList {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 .renderingPipeline {
+  list-style-type: none;
   .transformation, .dndPlaceholder {
     margin-right: 40px;
 
